[project]
name = "cityimages"
version = "0.1.0"
description = ""
authors = [
    {name = "tapichugina",email = "ttatyana.pichugina@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "cityimages", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
