[project]
name = "cityimages"
version = "0.1.0"
description = ""
authors = [
    {name = "tapichugina",email = "ttatyana.pichugina@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0,<2.0",
    "requests>=2.0,<3.0",
]

[project.scripts]
cityimages-download-pixabay = "cityimages.cli:main"

[tool.poetry]
packages = [{include = "cityimages", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
